--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -23,11 +23,6 @@ on:
         default: ""
         required: false
         type: string
-      scinsta_version: # SCInsta tweak sürüm numarası girişi (opsiyonel). 🔢✨🔄
-        description: "SCInsta Tweak Sürümü (Opsiyonel - Boş bırakılırsa control dosyasından alınır)"
-        default: ""
-        required: false
-        type: string
       instagram_app_version: # Instagram uygulama sürüm numarası girişi (opsiyonel). 📱🔢✨
         description: "Instagram Uygulama Sürümü (Opsiyonel - Boş bırakılırsa orijinal IPA'nın sürümü kullanılır)"
         default: ""
@@ -108,24 +103,60 @@ jobs:
           THEOS: ${{ github.workspace }}/theos # THEOS ortam değişkenini ayarlar.
           Instagram_URL: ${{ inputs.decrypted_instagram_url }} # Girişlerden alınan Instagram URL'sini kullanır.
 
-      - name: SCInsta ve Instagram Sürümünü Belirle 🏷️🔢✨📄
-        id: versions
+      - name: SCInsta Tweak Sürümünü Al 🏷️🔢✨📄
+        id: scinsta_version # Bu adım için bir ID belirler.
         run: |
-          # SCInsta Tweak Sürümünü Belirle
-          SCINSTA_TWEAK_VERSION=""
-          if [[ -n "${{ inputs.scinsta_version }}" ]]; then
-            SCINSTA_TWEAK_VERSION="${{ inputs.scinsta_version }}"
-            echo "SCInsta tweak sürümü manuel olarak ayarlandı: ${SCINSTA_TWEAK_VERSION}"
-          else
-            SCINSTA_TWEAK_VERSION=$(awk '/Version:/ {print $2}' main/control)
-            echo "SCInsta tweak sürümü control dosyasından alındı: ${SCINSTA_TWEAK_VERSION}"
-          fi
-          echo "SCINSTA_TWEAK_VERSION=${SCINSTA_TWEAK_VERSION}" >> "$GITHUB_ENV"
-          echo "scinsta_version=${SCINSTA_TWEAK_VERSION}" >> "$GITHUB_OUTPUT"
+          # SCInsta tweak sürümü control dosyasından alınır ve değiştirilemez.
+          SCINSTA_TWEAK_VERSION=$(awk '/Version:/ {print $2}' main/control)
+          echo "SCInsta tweak sürümü control dosyasından alındı: ${SCINSTA_TWEAK_VERSION}"
+          echo "SCINSTA_TWEAK_VERSION=${SCINSTA_TWEAK_VERSION}" >> "$GITHUB_ENV" # Ortam değişkeni olarak ayarla
+          echo "version=${SCINSTA_TWEAK_VERSION}" >> "$GITHUB_OUTPUT" # Çıktı olarak ayarla
 
-          # Instagram Uygulama Sürümünü Belirle (bu kısım build.sh'ye argüman olarak iletilmeli)
-          INSTAGRAM_APP_VERSION=""
+      - name: SCInsta tweak'i sideload için derle (IPA olarak) 🏗️📱🚀📦
+        run: |
+          pip install --force-reinstall https://github.com/asdfzxcvbn/pyzule-rw/archive/main.zip # pyzule-rw paketini yükler.
+          
+          cd main # Ana depo dizinine gider.
+          ls -la # Dizin içeriğini listeler.
+
+          # Uygulama adı, geliştirici adı, ikon kaldırma ve Instagram sürüm argümanlarını hazırla
+          BUILD_SCRIPT_ARGS="sideload"
+          if [[ -n "${{ inputs.app_name }}" ]]; then
+            BUILD_SCRIPT_ARGS+=" --uygulama-adi \"${{ inputs.app_name }}\""
+          fi
+          if [[ -n "${{ inputs.developer_name }}" ]]; then
+            BUILD_SCRIPT_ARGS+=" --gelistirici-adi \"${{ inputs.developer_name }}\""
+          fi
+          if [[ "${{ inputs.remove_app_icon }}" == "true" ]]; then
+            BUILD_SCRIPT_ARGS+=" --remove-app-icon"
+          fi
+          # Instagram uygulama sürümünü build.sh'ye argüman olarak ilet
           if [[ -n "${{ inputs.instagram_app_version }}" ]]; then
-            INSTAGRAM_APP_VERSION="${{ inputs.instagram_app_version }}"
-            echo "Instagram uygulama sürümü manuel olarak ayarlandı: ${INSTAGRAM_APP_VERSION}"
-          else
+            BUILD_SCRIPT_ARGS+=" --instagram-sürümü \"${{ inputs.instagram_app_version }}\""
+          fi
+
+          ./build.sh $BUILD_SCRIPT_ARGS # Hazırlanan argümanlarla derleme betiğini çalıştırır.
+
+          ls -la packages # 'packages' dizininin içeriğini listeler.
+            
+        env:
+          THEOS: ${{ github.workspace }}/theos # THEOS ortam değişkenini ayarlar.
+
+      - name: IPA'yı sürüm bilgisiyle yeniden adlandır 🏷️🔄📦✨
+        run: |
+          cd main/packages # 'packages' dizinine gider.
+          # SCINSTA_TWEAK_VERSION env değişkeni bu adımda kullanılabilir.
+          mv "$(ls -t | head -n1)" "SCInsta_sideloaded_v${SCINSTA_TWEAK_VERSION}.ipa" # En son oluşturulan IPA dosyasını SCInsta tweak sürüm bilgisiyle yeniden adlandırır.
+
+      - name: Paket adını yükleme eylemine ilet 📤📂➡️🔗
+        id: package_name # Bu adım için bir ID belirler.
+        run: |
+          echo "package=$(ls -t main/packages | head -n1)" >> "$GITHUB_OUTPUT" # En son paketin adını çıktı olarak ayarlar.
+
+      - name: Artifact Yükle ⬆️📦☁️✅
+        if: ${{ inputs.upload_artifact }} # Eğer 'upload_artifact' girişi doğru ise çalışır.
+        uses: actions/upload-artifact@v4 # Artifact yükleme eylemini kullanır.
+        with:
+          name: SCInsta_sideloaded_v${{ steps.scinsta_version.outputs.version }} # Yüklenecek artifact'in adı.
+          path: ${{ github.workspace }}/main/packages/${{ steps.package_name.outputs.package }} # Yüklenecek dosyanın yolu.
+          if-no-files-found: error # Dosya bulunamazsa hata verir.
